# cs-music-player

./: README.md  main.py  pyproject.toml  requirements.txt
cs_music_player/: __init__.py  app.py  audio_player.py  constants.py  lyrics.py  startup.py  store.py  ui.py
scripts/: smoke_test.py
