[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-music-player"
version = "0.0.0"
description = "CS Music Player - dependencies moved from requirements.txt"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "flet>=0.85.3",
    "flet-audio>=0.85.3",
    "mutagen>=1.47",
]
